# src/admin/controllers/gateway.go
@@ -1,15 +1,16 @@
 package controllers
 
 import (
-	"log"
+	"errors"
+	"fmt"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"pks.pyfreebilling.com/models"
 	"pks.pyfreebilling.com/services"
-	"pks.pyfreebilling.com/utils/api_errors"
 	"pks.pyfreebilling.com/utils/filters"
 )
 
@@ -19,31 +20,35 @@ import (
 //	@Description	Responds with the list of gateways as JSON.
 //	@Tags			gateways
 //	@Produce		json
-//	@Param			page		query		int		false	"int valid"		minimum(1)	maximum(10_000_000)
-//	@Param			page_size	query		int		false	"int valid"		minimum(5)	maximum(100)
-//	@Param			sort		query		string	false	"string enums"	Enums(id, name, ip_address, -id, -name, -ip_address)
-//	@Success		200			{array}		models.Gateways
-//	@Failure		400			{object}	api_errors.ApiError
-//	@Failure		404			{object}	api_errors.ApiError
-//	@Failure		500			{object}	api_errors.ApiError
+//	@Param			page		query		int		false	"int valid"		minimum(1)	maximum(10000000) default(1)
+//	@Param			page_size	query		int		false	"int valid"		minimum(5)	maximum(100) default(5)
+//	@Param			sort		query		string	false	"string enums"	Enums(id, name, ip_address, -id, -name, -ip_address) default(id)
+//	@Success		200			{object}	utils.PaginatedResponseHTTP{data=models.Gateways}
+//	@Error			400 {object} utils.ResponseErrorHTTP{}
+//	@Error			404 {object} utils.ResponseErrorHTTP{}
+//	@Failure		500	{object}	utils.ResponseErrorHTTP{}
 //	@Router			/gateways [get]
 func GetGateways(c *gin.Context) {
 	var filter filters.Filters
 	if err := c.ShouldBindQuery(&filter); err != nil {
-		log.Printf("Invalid inputs : %v", err.Error())
-		apiErr := api_errors.NewBadRequestError("Invalid inputs. Please check your inputs")
-		c.JSON(apiErr.Status, apiErr)
+		fmt.Printf("Invalid inputs : %v", err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error":   true,
+			"message": "Invalid inputs. Please check your inputs",
+		})
 		return
 	}
 	filter.Sort = filter.GetSort()
 	filter.SortSafelist = []string{"id", "name", "ip_address", "-id", "-name", "-ip_address"}
-	log.Printf("Filters OK : %v", filter)
+	fmt.Printf("Filters OK : %v", filter)
 
 	gateways, p, err := services.GatewaysService.ListGateways(filter)
 	if err != nil {
 		if err.Error() == "invalid page number" {
-			apiErr := api_errors.NewBadRequestError("Pagination error : invalid page number")
-			c.JSON(apiErr.Status, apiErr)
+			c.JSON(http.StatusBadRequest, gin.H{
+				"error":   true,
+				"message": "Pagination error : invalid page number",
+			})
 			return
 		}
 		c.AbortWithStatus(http.StatusInternalServerError)
@@ -51,7 +56,9 @@ func GetGateways(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"gateways":   gateways,
+		"error":      false,
+		"message":    "Gateway list",
+		"data":       gateways,
 		"pagination": p,
 	})
 }
@@ -63,28 +70,39 @@ func GetGateways(c *gin.Context) {
 //	@Tags			gateways
 //	@Produce		json
 //	@Param			gateway	body		models.Gateway	true	"gateway object"
-//	@Success		200		{object}	models.Gateway
+//	@Success		200		{object}	utils.ResponseHTTP{data=models.Gateway}
+//	@Error			400 {object} utils.ResponseErrorHTTP{}
+//	@Failure		500	{object}	utils.ResponseErrorHTTP{}
 //	@Router			/gateways/ [post]
 func CreateGateway(c *gin.Context) {
 	var gateway models.Gateway
 	if err := c.ShouldBindJSON(&gateway); err != nil {
-		log.Printf("invalid json body: %s", err)
-		apiErr := api_errors.NewBadRequestError("invalid json body")
-		c.JSON(http.StatusBadRequest, apiErr)
+		fmt.Printf("invalid json body: %s", err)
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error":   true,
+			"message": "Invalid json body. Please check your inputs",
+		})
 		return
 	}
 	gateway.CreatedAt = time.Now()
 
 	newGateway, saverr := services.GatewaysService.CreateGateway(gateway)
 	if saverr != nil {
-		log.Printf("error in creating gateway: %s", saverr)
-		c.AbortWithStatus(http.StatusInternalServerError)
+		fmt.Printf("error in creating gateway: %s", saverr)
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error":   true,
+			"message": "Error in creating gateway",
+		})
 		return
 	}
 
 	c.Header("Location", c.FullPath()+"/"+strconv.Itoa(int(newGateway.ID)))
 
-	c.JSON(http.StatusCreated, gin.H{"gateway": newGateway})
+	c.JSON(http.StatusCreated, gin.H{
+		"error":   false,
+		"message": "Gateway created",
+		"data":    newGateway,
+	})
 }
 
 // GetGatewayByID  godoc
@@ -93,31 +111,45 @@ func CreateGateway(c *gin.Context) {
 //	@Description	Get gateway by ID
 //	@Tags			gateways
 //	@Produce		json
-//	@Param			id	path		string	true	"Gateway ID"
-//	@Success		200	{object}	models.Gateway
-//	@Failure		400	{object}	api_errors.ApiError
-//	@Failure		404	{object}	api_errors.ApiError
-//	@Failure		500	{object}	api_errors.ApiError
+//	@Param			id	path		int	true	"Gateway ID"
+//	@Success		200	{object}	utils.ResponseHTTP{data=models.Gateway}
+//	@Error			400 {object} utils.ResponseErrorHTTP{}
+//	@Error			404 {object} utils.ResponseErrorHTTP{}
+//	@Failure		500	{object}	utils.ResponseErrorHTTP{}
 //
 //	@Header			200	{string}	Location	"/gateway/1"
 //	@Router			/gateways/{id} [get]
 func GetGatewayByID(c *gin.Context) {
 	var req models.GetGatewayRequest
 	if err := c.ShouldBindUri(&req); err != nil {
-		apiErr := api_errors.NewBadRequestError(err.Error())
-		c.JSON(apiErr.Status, apiErr)
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error":   true,
+			"message": "Invalid input. Please check your inputs",
+		})
 		return
 	}
 
 	gateway, apiErr := services.GatewaysService.GetGateway(req.ID)
 	if apiErr != nil {
-		c.JSON(apiErr.Status, apiErr)
+		rStatus := http.StatusInternalServerError
+		if errors.Is(apiErr, gorm.ErrRecordNotFound) {
+			rStatus = http.StatusBadRequest
+			apiErr = errors.New("id does not exists in database")
+		}
+		c.JSON(rStatus, gin.H{
+			"error":   true,
+			"message": apiErr.Error(),
+		})
 		return
 	}
 
 	c.Header("Last-Modified", gateway.UpdatedAt.String())
 
-	c.JSON(http.StatusOK, gateway)
+	c.JSON(http.StatusOK, gin.H{
+		"error":   false,
+		"message": "Requested gateway",
+		"data":    gateway,
+	})
 }
 
 // UpdateGateway  godoc
@@ -126,65 +158,94 @@ func GetGatewayByID(c *gin.Context) {
 //	@Description	update gateway.
 //	@Tags			gateways
 //	@Produce		json
-//	@Param			id	path		string	true	"id of the gateway"
-//	@Success		200	{object}	models.Gateway
-//	@Error			400 {string} "Invalid input"
-//	@Error			404 {string} "Invalid gateway ID"
+//	@Param			id	path		int	true	"id of the gateway"
+//	@Success		200	{object}	utils.ResponseHTTP{data=models.Gateway}
+//	@Error			400 {object} utils.ResponseErrorHTTP{}
+//	@Error			404 {object} utils.ResponseErrorHTTP{}
 //	@Router			/gateways/{id} [put]
 //
 // UpdateGateway update a gateway
 func UpdateGateway(c *gin.Context) {
 	var gateway models.Gateway
 
-	id, err := strconv.ParseInt(c.Params.ByName("id"), 10, 64)
-	if err != nil {
-		apiErr := api_errors.NewBadRequestError("Gateway ID must be an int64")
-		c.JSON(http.StatusBadRequest, apiErr)
-		return
-	}
-	if id <= 0 {
-		apiErr := api_errors.NewBadRequestError("Gateway ID must be a number > 0")
-		c.JSON(http.StatusBadRequest, apiErr)
+	var req models.GetGatewayRequest
+	if err := c.ShouldBindUri(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error":   true,
+			"message": "Invalid input. Please check your inputs",
+		})
 		return
 	}
 
-	_, dberr := services.GatewaysService.GetGateway(id)
-	if dberr != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": "Gateway not found"})
-		return
-	}
 	if err := c.ShouldBindJSON(&gateway); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error()})
+			"error":   true,
+			"message": "Invalid json body. Please check your inputs",
+		})
 		return
 	}
+
+	_, dberr := services.GatewaysService.GetGateway(req.ID)
+	if dberr != nil {
+		c.JSON(http.StatusNotFound, gin.H{
+			"error":   true,
+			"message": "Gateway not found",
+		})
+		return
+	}
+
 	updatedGateway, UpdateErr := services.GatewaysService.UpdateGateway(gateway)
 	if UpdateErr != nil {
-		c.AbortWithStatus(http.StatusNotFound)
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error":   true,
+			"message": "Error in updating gateway",
+		})
 	} else {
-		c.JSON(http.StatusOK, updatedGateway)
+		c.JSON(http.StatusOK, gin.H{
+			"error":   false,
+			"message": "Gateway updated",
+			"data":    updatedGateway,
+		})
 	}
 }
 
-// DeleteGateway deletes from DB a gateway
+// DeleteGateway  godoc
+//
+//	@Summary		Delete a gateway
+//	@Description	delete gateway.
+//	@Tags			gateways
+//	@Produce		json
+//	@Param			id	path		int	true	"id of the gateway"
+//	@Success		200	{object}	utils.ResponseHTTP{}
+//	@Error			400 {object} utils.ResponseErrorHTTP{}
+//	@Error			404 {object} utils.ResponseErrorHTTP{}
+//	@Router			/gateways/{id} [delete]
 func DeleteGateway(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Params.ByName("id"), 10, 64)
-	if err != nil {
-		apiErr := api_errors.NewBadRequestError("Gateway ID must be an int64")
-		c.JSON(http.StatusBadRequest, apiErr)
-		return
-	}
-	if id <= 0 {
-		apiErr := api_errors.NewBadRequestError("Gateway ID must be a number > 0")
-		c.JSON(http.StatusBadRequest, apiErr)
+	var req models.GetGatewayRequest
+	if err := c.ShouldBindUri(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error":   true,
+			"message": "Invalid input. Please check your inputs",
+		})
 		return
 	}
 
-	dberr := services.GatewaysService.DeleteGateway(id)
-	if dberr != nil {
-		c.AbortWithStatus(http.StatusNotFound)
+	dbErr := services.GatewaysService.DeleteGateway(req.ID)
+	if dbErr != nil {
+		rStatus := http.StatusInternalServerError
+		if errors.Is(dbErr, gorm.ErrRecordNotFound) {
+			rStatus = http.StatusBadRequest
+			dbErr = errors.New("id does not exists in database")
+		}
+		c.JSON(rStatus, gin.H{
+			"error":   true,
+			"message": dbErr.Error(),
+		})
 	} else {
-		c.JSON(http.StatusOK, gin.H{"message": "gateway successfully deleted"})
+		c.JSON(http.StatusOK, gin.H{
+			"error":   false,
+			"message": "Gateway successfully deleted",
+			"data":    nil,
+		})
 	}
 }
