# src/admin/docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0.0"
     },
     "host": "localhost:3000",
-    "basePath": "/api/v1",
+    "basePath": "/v1",
     "paths": {
         "/gateways": {
             "get": {
@@ -32,6 +32,7 @@
                         "maximum": 10000000,
                         "minimum": 1,
                         "type": "integer",
+                        "default": 1,
                         "description": "int valid",
                         "name": "page",
                         "in": "query"
@@ -40,6 +41,7 @@
                         "maximum": 100,
                         "minimum": 5,
                         "type": "integer",
+                        "default": 5,
                         "description": "int valid",
                         "name": "page_size",
                         "in": "query"
@@ -54,6 +56,7 @@
                             "-ip_address"
                         ],
                         "type": "string",
+                        "default": "id",
                         "description": "string enums",
                         "name": "sort",
                         "in": "query"
@@ -63,31 +66,28 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/models.Gateway"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.PaginatedResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.Gateway"
+                                            }
+                                        }
+                                    }
                                 }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/api_errors.ApiError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/api_errors.ApiError"
+                            ]
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api_errors.ApiError"
+                            "$ref": "#/definitions/utils.ResponseErrorHTTP"
                         }
                     }
                 }
@@ -118,7 +118,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Gateway"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.ResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Gateway"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ResponseErrorHTTP"
                         }
                     }
                 }
@@ -136,7 +154,7 @@
                 "summary": "Show a gateway",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Gateway ID",
                         "name": "id",
                         "in": "path",
@@ -147,7 +165,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Gateway"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.ResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Gateway"
+                                        }
+                                    }
+                                }
+                            ]
                         },
                         "headers": {
                             "Location": {
@@ -156,22 +186,10 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/api_errors.ApiError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/api_errors.ApiError"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api_errors.ApiError"
+                            "$ref": "#/definitions/utils.ResponseErrorHTTP"
                         }
                     }
                 }
@@ -187,7 +205,7 @@
                 "summary": "Update a gateway",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "id of the gateway",
                         "name": "id",
                         "in": "path",
@@ -198,7 +216,46 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Gateway"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.ResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Gateway"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "delete gateway.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gateways"
+                ],
+                "summary": "Delete a gateway",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of the gateway",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ResponseHTTP"
                         }
                     }
                 }
@@ -230,16 +287,25 @@
         }
     },
     "definitions": {
-        "api_errors.ApiError": {
+        "filters.Pagination": {
             "type": "object",
             "properties": {
-                "error": {
-                    "type": "string"
+                "current_page": {
+                    "type": "integer"
                 },
-                "message": {
-                    "type": "string"
+                "last_page": {
+                    "type": "integer"
                 },
-                "status": {
+                "next_page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "prev_page": {
+                    "type": "integer"
+                },
+                "total_records": {
                     "type": "integer"
                 }
             }
@@ -247,7 +313,7 @@
         "models.Gateway": {
             "type": "object",
             "required": [
-                "ipaddress",
+                "ip_address",
                 "name",
                 "port",
                 "protocol"
@@ -261,7 +327,7 @@
                     "description": "Gateway ID",
                     "type": "integer"
                 },
-                "ipaddress": {
+                "ip_address": {
                     "description": "IP Address of the gateway",
                     "type": "string"
                 },
@@ -287,6 +353,47 @@
                 },
                 "updated_at": {
                     "description": "Updated time",
+                    "type": "string"
+                }
+            }
+        },
+        "utils.PaginatedResponseHTTP": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "message": {
+                    "type": "string"
+                },
+                "pagination": {
+                    "$ref": "#/definitions/filters.Pagination"
+                }
+            }
+        },
+        "utils.ResponseErrorHTTP": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.ResponseHTTP": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "message": {
                     "type": "string"
                 }
             }
